--- a/index.html
+++ b/index.html
@@ -18,8 +18,21 @@
 </head>
 <body class="bg-gray-100 min-h-screen p-6">
     <div class="max-w-4xl mx-auto">
-        <h1 class="text-center text-2xl font-bold text-gray-900">Marketing Strategy Evaluator</h1>
-        <p class="text-center text-gray-600 mb-6">Analyze your marketing strategy's effectiveness</p>
+        <!-- Headline with Credit -->
+        <h1 class="text-center text-2xl font-bold text-gray-900">
+            Marketing Strategy Evaluator
+        </h1>
+        <p class="text-center text-gray-600 mb-2">
+            Idea by 
+            <a href="https://www.linkedin.com/in/michael-maximoff/" 
+               target="_blank" 
+               class="text-indigo-600 font-bold hover:underline">
+               Michael Maximoff
+            </a>
+        </p>
+        <p class="text-center text-gray-600 mb-6">
+            Analyze your marketing strategy's effectiveness
+        </p>
 
         <!-- Input -->
         <div class="bg-white p-6 rounded-lg shadow-md mb-6">
